# EWS

./: .editorconfig  .gitignore  .gitmodules  CONTRIBUTING.md  EWS.natvis  README.md  genproject.bat  wxWidgetsPackage.lua  xmake.lua
.github/workflows/: build.yml
ews_lib/: CMakeLists.txt  xmake.lua
ews_lib/include/: EWS.h  diesel.h  ews_lua.hpp  ews_utils.h
ews_lib/src/: EWS.cpp  diesel.cpp  event_name_associations.txt  event_name_includes.txt  ews_utils.cpp  input.cpp  input.h  rendering.cpp  rendering.h  wxwidgets_includes.h
ews_lib/src/ews/: AnyButton.cpp  AnyButton.h  AppWindow.cpp  AppWindow.h  BitmapButton.cpp  BitmapButton.h  BoxSizer.cpp  BoxSizer.h  Button.cpp  Button.h  CheckBox.cpp  CheckBox.h  ComboBox.cpp  ComboBox.h  Control.cpp  Control.h  Dialog.cpp  Dialog.h  EventHandler.cpp  EventHandler.h  FileDialog.cpp  FileDialog.h  Frame.cpp  Frame.h  ListBox.cpp  ListBox.h  ListCtrl.cpp  ListCtrl.h  Menu.cpp  Menu.h  MenuBar.cpp  MenuBar.h  MessageDialog.cpp  MessageDialog.h  Notebook.cpp  Notebook.h  Panel.cpp  Panel.h  ProgressDialog.cpp  ProgressDialog.h  (+34 more)
game_cpp/pd2/: CMakeLists.txt
game_cpp/pd2/src/: main.cpp
game_cpp/pdth/: CMakeLists.txt
game_cpp/pdth/src/: main.cpp  rendering.cpp  rendering.h
game_cpp/raidww2/src/: main.cpp  rendering.h
game_lua/: CMakeLists.txt  xmake.lua
game_lua/include/: game_lua.h  lua_funcs.h
game_lua/src/: gamelua.cpp  internal_header.h  pd2.cpp  pdth.cpp  raidww2.cpp
game_mod/PDTH/: ews_setup.lua
game_mod/PDTH/editor_patches/: coreeditor_post.lua  coremodule_post.lua  coresetup_post.lua  engine_function_overrides.lua  entry_pre.lua
game_mod/PDTH/ews/: ews.lua
game_mod/RAIDWW2/: asset_additions.lua  patched.md  supermod.xml
game_mod/RAIDWW2/assets/: default_controller.xml  editor_types.xml  predefined_instances.xml
game_mod/RAIDWW2/assets/core/units/patrol_point/: patrol_point.model
game_mod/RAIDWW2/assets/core/units/portal_shape/: portal_shape.model
game_mod/RAIDWW2/assets/core/units/sound_environment/: sound_environment.model
game_mod/RAIDWW2/editor_patches/: coreeditor_post.lua  coremodule_post.lua  coresetup_post.lua  coresetup_pre.lua  engine_function_overrides.lua  entry_pre.lua  worldholder_override.lua
game_mod/RAIDWW2/ews/: ews.lua
raidww2/: CMakeLists.txt
scripts/: buildwxwidgets.py  packagestaging.py
test_env/: CMakeLists.txt  lua_funcs.h  xmake.lua
test_env/lua_scripts/: menu_bar.lua  test.lua  testmenu.lua  tool_bar.lua
test_env/src/: main.cpp
tools/exepatcher/: fixed_manifest.manifest  xmake.lua
tools/exepatcher/src/: main.cpp
version_proxy/: CMakeLists.txt  main.cpp  xmake.lua
